# rembler

./: .gitignore  CLAUDE.md  README.md  Untitled.ipynb  Untitled1.ipynb  main.py  process_mpsd.py  pyproject.toml  sample_exploration.ipynb  sleep_utils.py  test_training.ipynb  train.py
.github/workflows/: ci.yml
artifacts/: best.pt  metrics.json
config/: config.yaml
config/train_spec/: train_spec.yaml
notebooks/: sample_exploration.ipynb  save_to_hdf5.ipynb  test_datasets.ipynb  test_training.ipynb
scripts/: downsample_dataset.py  downsample_test_dataset.py  generate_dataset_hdf5.py  preprocess_edf_dir.py  process_mpsd.py
src/configs/: configs.py
src/dataio/: edf_reader.py
src/models/: basic_dense.py  cnn_bilstm.py  implicit_cnn.py
src/rembler/: cv.py
src/rembler/analysis/metrics/: custom_metrics.py
src/rembler/configs/: configs.py
src/rembler/dataio/: datasets.py  edf_reader.py
src/rembler/evaluation/metrics/: custom_metrics.py
src/rembler/interface/: cli.py  logger.py
src/rembler/models/: basic_cnn.py  basic_dense.py  build.py  cnn_bilstm.py  implicit_cnn.py
src/rembler/training/: hardware_utils.py  train.py  train_utils.py
src/rembler/utils/: config_utils.py  dataset_utils.py  hardware_utils.py  io_utils.py  labels.py  scratch.ipynb  sleep_utils.py
src/utils/: config_utils.py  labels.py  sleep_utils.py
tests/utils/: sleep_utils.py  test_config_utils.py  test_dataset_utils.py  test_hardware_utils.py  test_io_utils.py  test_labels.py  test_sleep_utils.py
