[project]
name = "rembler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "mne>=1.10.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydra-config>=0.0.17.post1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lab>=8.4",
]
